# backend

./: .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  cloudflare-dns.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.deta/: prog_info  state
.github/: dependabot.yml
.github/workflows/: main.yml  pull-request.yml
app/: config.py  consts.py  exceptions.py  literals.py  main.py
app/api/: profile.py  riot.py
app/models/: __init__.py  generic.py  profile.py
app/routers/: matches.py  profile.py
tests/: conftest.py  test_profile.py
tests/api/: test_profile.py  test_riot.py
tests/routers/: test_matches.py  test_profile.py
